# django_social_media

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  entrypoint.sh  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: routers.py
backend/core/abstract/: models.py  serializers.py
backend/core/auth/: serializers.py
backend/core/comment/: apps.py
backend/core/user/: models.py  serializers.py  viewsets.py
config/: settings.py  urls.py
core/: routers.py
core/auth/: apps.py
core/user/: models.py  serializers.py  viewsets.py
core/user/migrations/: 0001_initial.py  0002_user_is_staff_alter_user_created_alter_user_updated.py
notes/: django_internals.md  docker_mastery.md  uv_guide.md
social-media-app/: package-lock.json  package.json
