[project]
name = "django-social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "uuid>=1.30",
]
